--- a/lab1/CMakeLists.txt
+++ b/lab1/CMakeLists.txt
@@ -5,3 +5,4 @@ set(CMAKE_CXX_STANDARD 98)
 
 add_executable(Reporter Reporter/reporterMain.cpp)
 add_executable(Creator Creator/creatorMain.cpp)
+add_executable(lab1 main.cpp)
