--- a/lab4_C98/CMakeLists.txt
+++ b/lab4_C98/CMakeLists.txt
@@ -3,4 +3,4 @@ project(lab4_C98)
 
 set(CMAKE_CXX_STANDARD 98)
 
-add_executable(lab4_C98 main.cpp)
+add_executable(lab4_C98 receiver.cpp sender.cpp)
