--- a/lab5_C98/Client/CMakeLists.txt
+++ b/lab5_C98/Client/CMakeLists.txt
@@ -2,4 +2,4 @@ cmake_minimum_required(VERSION 3.21)
 project(Client)
 set(CMAKE_CXX_STANDARD 98)
 include_directories(../Server)
-add_executable(Client main.cpp ../Server/employee.h)
+add_executable(Client main.cpp ../Client/employee.h)
